global.scss
@import "./variables";
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');

:root {
  font-size: 10px;
}

body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  background-color: $main-grey;
  font-family: 'Raleway', sans-serif;
  color: white;
}

h1 {
  font-family: 'Poppins', sans-serif;
  font-size: 4rem;
  font-weight: 600;
}

h2 {
  font-size: 3.5rem;
  font-weight: 600;
}

h3 {
  font-size: 3rem;
  font-weight: 600;
}

p {
  font-size:  2.2rem;
  font-weight: 400;
}

a {
  font-family: 'Poppins', sans-serif;
  font-size: 2.5rem;
  font-weight: 600;
  text-decoration: none;
}

.default-btn {
  width: 27rem;
  height: 7.7rem;
  border-radius: 1rem;
}

.blue-btn {
  background-color: $main-blue;
  color: white;
}

.white-btn {
  background-color: white;
  color: $main-grey;
}

.d-flex {
  display: flex;
}

.fd-column {
  flex-direction: column;
}

.fd-row {
  flex-direction: row;
}

.jc-center {
  justify-content: center;
}

.jc-space-btw {
  justify-content: space-between;
}

.jc-flex-end {
  justify-content: flex-end;
}

.al-center {
  align-items: center;
}

.al-start {
  align-items: start;
}

.al-end {
  align-items: end;
}

.margin-t {
  margin-top: 8rem;
}

.margin-b {
  margin-bottom: 8rem;
}

.c-pointer {
  cursor: pointer;
}

